--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "discrypto",
-  "version": "1.0.0",
+  "name": "psst",
+  "version": "0.1.0",
   "description": "",
   "main": ".eslintrc.js",
   "scripts": {
